crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__not_empty.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"not\":{}}"
expression: is_valid_body(schema)
---
false
