crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__object_props_patterns_dependencies.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"additionalProperties\":false,\"dependencies\":{\"a\":[\"b\"]},\"patternProperties\":{\"^x\":{\"type\":\"integer\"}},\"properties\":{\"a\":{}},\"type\":\"object\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Object(obj) => {
                ({
                    let __object_pass = obj
                        .iter()
                        .all(|(key, instance)| {
                            let mut covered = false;
                            match key.as_str() {
                                "a" => {
                                    covered = true;
                                }
                                _ => {}
                            }
                            if key.as_str().starts_with("x") {
                                if !(match instance {
                                    __Value::Number(n) => __types::is_integer(n),
                                    _ => false,
                                }) {
                                    return false;
                                }
                                covered = true;
                            }
                            if !covered {
                                return false;
                            }
                            true
                        });
                    __object_pass
                }) && (if obj.contains_key("a") { obj.contains_key("b") } else { true })
            }
            _ => false,
        }
