crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__one_of.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"oneOf\":[{\"type\":\"string\"},{\"type\":\"number\"}]}"
expression: is_valid_body(schema)
---
{
            let mut matched = instance.is_string();
            (if instance.is_number() {
                if matched {
                    false
                } else {
                    matched = true;
                    true
                }
            } else {
                true
            }) && matched
        }
