crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__one_of_bool_discriminator.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"oneOf\":[{\"properties\":{\"k\":{\"const\":true}},\"required\":[\"k\"],\"type\":\"object\"},{\"properties\":{\"k\":{\"const\":false}},\"required\":[\"k\"],\"type\":\"object\"}]}"
expression: is_valid_body(schema)
---
{
            let __one_of_discriminator = match instance {
                serde_json::Value::Object(obj) => {
                    obj.get("k").and_then(serde_json::Value::as_bool)
                }
                _ => None,
            };
            let mut matched = (matches!(__one_of_discriminator, Some(true))
                && { is_branch_valid_0(instance) });
            (if (matches!(__one_of_discriminator, Some(false))
                && { is_branch_valid_1(instance) })
            {
                if matched {
                    false
                } else {
                    matched = true;
                    true
                }
            } else {
                true
            }) && matched
        }
