crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__one_of_const_discriminator_draft4.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"oneOf\":[{\"properties\":{\"k\":{\"const\":\"a\"}},\"required\":[\"k\"],\"type\":\"object\"},{\"properties\":{\"k\":{\"const\":\"b\"}},\"required\":[\"k\"],\"type\":\"object\"}]}"
expression: code
---
{
            let mut matched = is_branch_valid_0(instance);
            (if is_branch_valid_1(instance) {
                if matched {
                    false
                } else {
                    matched = true;
                    true
                }
            } else {
                true
            }) && matched
        }
